<resources>
    <string name="app_name">Cocktails</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cocktails_title">My Cocktails</string>
    <string name="add_your_first_cocktail_here">Add your first cocktail here</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="description">Description</string>
    <string name="recipe">Recipe</string>
    <string name="error_while_loading">Error while loading</string>
    <string name="pink_lemonade">Pink Lemonade</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="error_no_chip_text">Add ingredient</string>
    <string name="ingredients">Ingredients</string>
    <string name="recipe_title">Recipe:</string>
    <string name="add_ingredient_title">Add Ingredient</string>
    <string name="title_hint">Title</string>
    <string name="ingredient">Ingredient</string>
</resources>