<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    tools:context=".presentation.details.CocktailDetailsFragment">

    <ImageView
        android:id="@+id/iv_cocktail"
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:background="@color/text_gray"
        android:scaleType="centerCrop"
        android:src="@drawable/detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:maxHeight="420dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="@drawable/rounded_corners">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:paddingBottom="30dp"
                app:layout_constraintBottom_toTopOf="@+id/btnEdit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="28dp"
                    android:scrollbars="none"
                    app:layout_constraintBottom_toBottomOf="@+id/cl"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:paddingBottom="50dp">

                        <ProgressBar
                            android:id="@+id/progressIndicator"
                            android:layout_width="75dp"
                            android:layout_height="75dp" />

                        <TextView
                            android:id="@+id/tvTitle"
                            style="@style/TitleText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/pink_lemonade" />


                        <TextView
                            android:id="@+id/tvDescription"
                            style="@style/MediumText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="16dp"
                            android:layout_marginTop="16dp"
                            android:textAlignment="center"
                            tools:text="To make this homemade pink lemonade, simply combine all the ingredients in a pitcher." />

                        <TextView
                            android:id="@+id/tvIngredients"
                            style="@style/MediumText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="16dp"
                            android:layout_marginTop="32dp"
                            android:textAlignment="center"
                            tools:text="cup of water\nspoon of sugar\ncup of juice" />

                        <TextView
                            android:id="@+id/tvRecipeTitle"
                            style="@style/MediumText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="16dp"
                            android:layout_marginTop="32dp"
                            android:text="@string/recipe_title"
                            android:textAlignment="center"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tvRecipe"
                            style="@style/MediumText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="16dp"
                            android:layout_marginTop="4dp"
                            android:textAlignment="center"
                            android:textSize="14sp"
                            tools:text="Muddle lime with leaves from the mint using a pestle and mortar. Mix with sprite. Add ice if needed." />
                    </LinearLayout>
                </ScrollView>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btnEdit"
                style="@style/MyButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/edit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>